# resolve-robotics-uri-py

./: LICENSE  README.md  ci_env.yml  pyproject.toml  setup.cfg
.github/workflows/: ci.yml  publish-to-pypi.yml
src/resolve_robotics_uri_py/: __init__.py  resolve_robotics_uri_py.py
test/: test_resolve_robotics_uri_py.py
