[metadata]
name = resolve-robotics-uri-py
description = Pure python package to solve ROS-style package:// and Gazebo-style model:// URIs in absolute paths.
long_description = file: README.md
long_description_content_type = text/markdown
author = Silvio Traversaro
author_email = silvio.traversaro@iit.it
license = BSD
license_files = LICENSE
platforms = any
url = https://github.com/ami-iit/resolve-robotics-uri-py

project_urls =
    Changelog = https://github.com/ami-iit/resolve-robotics-uri-py/releases
    Source = https://github.com/ami-iit/resolve-robotics-uri-py
    Tracker = https://github.com/ami-iit/resolve-robotics-uri-py/issues

keywords =

classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: Implementation :: CPython
    Topic :: Software Development

[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
   resolve-robotics-uri-py = resolve_robotics_uri_py.resolve_robotics_uri_py:main

[options.extras_require]
style =
    black
    isort
testing =
all =
    %(style)s
    %(testing)s

[tool:pytest]
addopts = -rsxX -v --strict-markers
testpaths = test
