[options]
zip_safe = False
packages = find:
package_dir =
    =src
python_requires = >=3.8
install_requires =


[options.packages.find]
where = src

[options.entry_points]
console_scripts =
   resolve-robotics-uri-py = resolve_robotics_uri_py.resolve_robotics_uri_py:main

[options.extras_require]
style =
    black
    isort
testing =
all =
    %(style)s
    %(testing)s

[tool:pytest]
addopts = -rsxX -v --strict-markers
testpaths = test
